Fix overflow issues

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -16,8 +16,4 @@
 @use "./contact-information";
 @use "./animations";
 
-html,
-body,
-section {
-    overflow-x:hidden !important;
-}
+
